welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: ')' expected but 'else' found.
	}else if((a >= 13 && a <= 19) && (b >= 13 && b<= 19)){
         ^